# agnblue-vyakarana

./: LICENSE.txt  README.md  create_agnblue.ps1  pyproject.toml
.github/: CODEOWNERS.txt
.github/workflows/: ci.yml
agnblue/: __init__.py  cli.py
agnblue/runtime/: dhātu.py  kāraka.py  vākya.py
examples/todo/: todo.agn
examples/todo/ecommerce/: cart.agn
