[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agnblue-vyakarana"
version = "0.1.0"
description = "Programming language based on Sanskrit grammatical structure"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Scitamehtam Maisu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
agnblue = "agnblue.cli:main"

# THIS WAS MISSING - Tells hatchling where the package is
[tool.hatch.build.targets.wheel]
packages = ["agnblue"]

[tool.black]
line-length = 88
